--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,8 @@
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
   <title>מערכת ניהול משמרות • דף הבית</title>
-  <link rel="stylesheet" href="/css/style.css?v=3" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
   <style>
     body {
@@ -144,8 +145,10 @@
       font-weight: 600;
     }
   </style>
+  <link rel="stylesheet" href="/css/premium.css">
+  <script defer src="/js/ui.js"></script>
 </head>
-<body>
+<body class="theme-dark-premium">
 
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
