--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>כניסת מנהל • NEW DELI</title>
-  <link rel="stylesheet" href="/css/style.css?v=3" />
+  <link rel="stylesheet" href="style.css" />
   
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
@@ -91,8 +91,10 @@
       margin-top: 14px;
     }
   </style>
+  <link rel="stylesheet" href="/css/premium.css">
+  <script defer src="/js/ui.js"></script>
 </head>
-<body>
+<body class="theme-dark-premium">
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
   <span class="burger" id="burger">&#9776;</span>
