--- a/views/index.html
+++ b/views/index.html
@@ -5,12 +5,15 @@
   <title>ניהול משמרת ערב</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/icons/icon-512.png" type="image/png">
+<link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
 
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css?v=2">
+  <link rel="stylesheet" href="/css/premium.css">
+  <script defer src="/js/ui.js"></script>
 </head>
 
-<body>
+<body class="theme-dark-premium">
   <h1>משמרת ערב - הזנת משימות</h1>
 <header class="brandbar">
   <span class="brand-title">NEW DELI</span>
