--- a/views/home.html
+++ b/views/home.html
@@ -191,7 +191,7 @@
       </a>
 
 <a href="/task" class="nav-card">
-  <div class="nav-title"><span class="nav-icon">📝</span> ניהול משימות</div>
+  <div class="nav-title"><span class="nav-icon">⚒</span> ניהול משימות</div>
   <div class="nav-desc">הוסיפו, ערכו ומחקו משימות יומיות, שבועיות וחודשיות בקלות.</div>
 </a>
 
