--- a/views/tasks.html
+++ b/views/tasks.html
@@ -48,7 +48,7 @@
 .task-category h2 {
   margin: 0 0 12px;
   font-size: 1.2rem;
-  color: #ffcb05;
+  color: white;
   border-bottom: 1px solid rgba(255,255,255,0.08);
   padding-bottom: 6px;
 }
@@ -122,6 +122,7 @@
   cursor: pointer;
   color: #fff;
   font-size: 14px;
+  margin-top: 10px;
   transition: 0.2s;
 }
 .no-tasks {
