--- a/views/tasks.html
+++ b/views/tasks.html
@@ -292,6 +292,6 @@ async function editTask(id, oldName, oldCategory) {
   // טעינה ראשונית
   loadTasks();
 </script>
-
+<script src="/js/global.js"></script>
 </body>
 </html>
