--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,10 @@
 
   <title>מערכת ניהול משמרות • דף הבית</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="ניהול משמרות">
 <meta name="theme-color" content="#2b5329">
   <style>
     body {
